--- a/src/components/Pages/Reader/Reader.scss
+++ b/src/components/Pages/Reader/Reader.scss
@@ -5,6 +5,25 @@
     flex-direction: column;
     align-items: center; /* Centers the content on the cross-axis */
     padding: 1rem; /* Add padding around the content */
+
+    .action-row {
+        display: flex;
+        margin-top: 10px;
+        font-size: 20px;
+
+        a {
+            text-decoration: none;
+            color: $darkestColor;
+        }
+
+        &.action-row__top {
+            margin-top: 0;
+        }
+
+        .separator {
+            margin: 0 10px;
+        }
+    }
 }
 
 .page-content {
@@ -20,6 +39,19 @@
     max-width: 100%; /* Ensures the image is no wider than its container */
     height: auto; /* Maintains the aspect ratio of the image */
     margin-bottom: 0; /* Removes any gap between the images */
+}
+
+.dark {
+    .action-row {
+        a {
+            color: $lightestColor;
+        }
+    }
+}
+
+.disqus-container {
+    max-width: $breakpoint-lg;
+    width: 100vw;
 }
 
 /* Responsive adjustments */
