--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,8 @@ main {
 
 .page-container {
     max-width: $max-content-width;
+    width: 100%;
+    margin: 0 auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
