--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,8 +11,13 @@
     background-color: $darkestColor;
     color: $lightestColor;
     border-bottom: 1px solid #000;
+    background-color: rgba(0,0,0,.25);
 
     z-index: 1000;
+}
+
+.header:hover {
+    background-color: rgba(0,0,0,.75);
 }
 
 .logo {
