--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,30 @@
     height: 80px;
 
     z-index: 1000;
+
+    .search-wrapper {
+        width: 50%;
+        position: relative;
+
+        .search {
+            background-color: transparent;
+            padding: 10px;
+            border: 1px solid #aaa;
+            color: #fff;
+            border-radius: 20px;
+            width: 100%;
+        }
+
+        i.fa_custom {
+            position: absolute;
+            top: 10px;
+            right: 0;
+        }
+
+        i:hover {
+            cursor: pointer;
+        }
+    }
 }
 
 .header:hover {
