--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 @import '../../_variables.scss';
 
 .footer {
-  background-color: #333;
+  background-color: rgba(0,0,0,.75);
   color: white;
   text-align: center;
   padding: 1em 0;
@@ -16,7 +16,9 @@
 
 .container {
   width: 90%;
-  margin: auto;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .text-muted {
