--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,11 +3,8 @@
 
 
 .header {
-    display: flex;
     position: relative;
-    justify-content: space-between;
     align-items: center;
-    padding: 0.5em 1em;
     color: $lightestColor;
     border-bottom: 1px solid #000;
     background-color: rgba(0,0,0,.25);
@@ -15,29 +12,16 @@
 
     z-index: 1000;
 
-    .search-wrapper {
-        width: 50%;
-        position: relative;
-
-        .search {
-            background-color: transparent;
-            padding: 10px;
-            border: 1px solid #aaa;
-            color: #fff;
-            border-radius: 20px;
-            width: 100%;
-        }
-
-        i.fa_custom {
-            position: absolute;
-            top: 10px;
-            right: 0;
-        }
-
-        i:hover {
-            cursor: pointer;
-        }
+    .nav-wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin-top: -5px;
+        max-width: $breakpoint-lg;
+        margin: 0 auto;
+        margin-top: -6px;
     }
+
+    
 }
 
 .header:hover {
@@ -45,8 +29,10 @@
 }
 
 .logo {
+    position: relative;
     height: auto;
-    width: 120px; /* Adjust as needed */
+    width: 170px;
+    top: 5px;
 }
 
 .nav {
