--- a/src/App.scss
+++ b/src/App.scss
@@ -42,7 +42,7 @@ main {
 .page-container {
     max-width: $max-content-width;
     width: 100%;
-    margin: 0 auto;
+    margin: 20px auto;
     background-color: rgba(0,0,0,.75);
     padding: 10px;
 }
