--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,15 +3,19 @@
 @import '../../_variables.scss';
 
 .footer {
-  background-color: rgba(0,0,0,.75);
-  color: white;
-  text-align: center;
-  padding: 1em 0;
-  position: relative;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: auto;
-  border-top: 1px solid #000;
+    background-color: rgba(0,0,0,.25);
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: auto;
+    border-top: 1px solid #000;
+
+    &:hover {
+        background-color: rgba(0,0,0,.75);
+    }
 }
 
 .container {
