Added SEO stuff, About Us, other cleanups and improvements... almost there

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,8 +84,12 @@ h2.subtitle {
 }
 
 a {
-    color: #3166ab;
+    color: $linkOnLight;
     text-decoration: none;
+
+    &:hover {
+        color: $linkOnLightHover;
+    }
 }
 
 @keyframes App-logo-spin {
