--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,3 +11,9 @@ $darkestColor: #000;
 $lightestColor: #eee;
 
 $miniPromoSize: 200px;
+
+$linkOnDark: gold;
+$linkOnDarkHover: darkgoldenrod;
+
+$linkOnLight: #3166ab;
+$linkOnLightHover: #31666F;
