--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -20,12 +20,16 @@
             background-color: #33d;
         }
 
-        &_14- {
+        &_14 {
+            background-color: orange;
+        }
+
+        &_18 {
             background-color: red;
         }
 
         &_funny {
-            background-color: orangered;
+            background-color: green;
         }
 
         &_romantic {
