--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -41,10 +41,14 @@
 }
 
 .nav a {
-    color: white;
+    color: $linkOnDark;
     text-decoration: none;
     padding: 0 1em;
     font-size: 1.5rem;
+
+    &:hover {
+        color: $linkOnDarkHover;
+    }
 }
 
 .hamburger {
