--- a/src/components/Pages/Comic/Comic.scss
+++ b/src/components/Pages/Comic/Comic.scss
@@ -10,6 +10,15 @@
     margin: 0 auto;
     width: 100%;
 
+    .icon {
+        img {
+            float: left;
+            width: 20em;
+            height: 20em;
+            margin: 0 10px 10px 0;
+        }
+    }
+
     .summary {
         font-size: 1.5em;
     }
@@ -93,6 +102,17 @@
 
 
 @media (max-width: $breakpoint-sm) {
+    .comic-info {
+        .icon {
+            margin: 0 auto;
+            text-align: center;
+            
+            img {
+                float: unset;
+            }
+        }
+    }
+
     .episodes-list {
         .episode-icon {
             display: none;
