Removed 18 restriction check, updated mini promo, other bug fixes

--- a/src/components/MiniPromo/MiniPromo.scss
+++ b/src/components/MiniPromo/MiniPromo.scss
@@ -18,8 +18,7 @@
     }
 
     h3 {
-        margin-top: 0;
-        position: absolute;
+        margin: 0;
         padding: 10px 0;
         text-align: center;
         background-color: rgba(0,0,0,0.85);
