--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,6 +16,11 @@
     &:hover {
         background-color: rgba(0,0,0,.75);
     }
+
+    .lnk__index-static a {
+        color: #000;
+        font-size: 8px;
+    }
 }
 
 .container {
