--- a/src/components/Pages/Reader/Reader.scss
+++ b/src/components/Pages/Reader/Reader.scss
@@ -2,6 +2,7 @@
 
 .page-container__reader {
     /* TODO FIX THIS!! */
+    position: relative;
 
     .action-row {
         display: flex;
@@ -29,6 +30,21 @@
     
         .last {
             flex-shrink: 0;
+        }
+
+        .full-screen {
+            position: absolute;
+            background-color: rgba(0,0,0,0.75);
+            padding: 0;
+            margin: 0;
+            top: 80px;
+            right: 50px;
+            font-size: 20px;
+        }
+
+        .full-screen::after {   
+            content: '\26F6';   
+            padding: 10px; 
         }
     }
 }
