Fixed weird mobile calculations and disabled blue crap on tapping

--- a/src/components/PanelViewer/PanelViewer.scss
+++ b/src/components/PanelViewer/PanelViewer.scss
@@ -32,6 +32,11 @@
         height: 100%;
         width: 50%;
         cursor: pointer;
+
+        -webkit-tap-highlight-color: transparent;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
         
         &.left {
             left: 0;
